--- a/Test Notebook.ipynb
+++ b/Test Notebook.ipynb
@@ -49,10 +49,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once you've done that, click \"Save Notebook As\" from the \"Files\" menu in the lefthand side. Save the notebook as \"test_notebook\". It will appear in the list of files in the lefthand column. Click on it to open it. Then click the \"Download\" button at the top of the window to download it to your own computer.  \n",
+    "Once you've done that, click \"Save Notebook As\" from the \"Files\" menu in the lefthand side. Save the notebook as \"test_notebook2\". It will appear in the list of files in the lefthand column. Click on it to open it. Then click the \"Download\" button at the top of the window to download it to your own computer.  \n",
     "\n",
-    "Once you've downloaded your saved copy, you should close the notebook in the cloud, then relaunch it. Click the \"up arrow\" icon in the top left menu and upload both your \"test_notebook.ipynb\" file and your \"austen_pride.txt\" file. Open the test notebook you've just uploaded, which you'll see in the lefthand menu. All your previous work should be intact so that you can continue to work with the notebook. Save everything each time you work with it in the cloud, repeating the steps we just followed. "
+    "Once you've downloaded your saved copy, you should close the notebook in the cloud, then relaunch it. Click the \"up arrow\" icon in the top left menu and upload both your \"test_notebook2.ipynb\" file and your \"austen_pride.txt\" file. Open the test notebook you've just uploaded, which you'll see in the lefthand menu. All your previous work should be intact so that you can continue to work with the notebook. Save everything each time you work with it in the cloud, repeating the steps we just followed. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
